--- a/GroupProject/JobCompare6300/app/build.gradle
+++ b/GroupProject/JobCompare6300/app/build.gradle
@@ -21,6 +21,12 @@ android {
         }
     }
 
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
+
 }
 
 dependencies {
