--- a/GroupProject/JobCompare6300/app/local.properties
+++ b/GroupProject/JobCompare6300/app/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 25 16:06:19 PDT 2020
-sdk.dir=C\:\\Users\\Kikas\\AppData\\Local\\Android\\Sdk
+#Thu Jul 02 19:59:23 PDT 2020
+sdk.dir=C\:\\Users\\ezekiel\\AppData\\Local\\Android\\Sdk
